cache update on device delete/restore
